[claude/fix-cart-quantity-display-Qqbpr] Auto commit on 2026-02-03 13:35:50 | Files: src/main/java/com/emenu/features/auth/controller/UserLocationController.java src/main/java/com/emenu/features/auth/service/UserLocationService.java src/main/java/com/emenu/features/auth/service/impl/UserLocationServiceImpl.java